# mnist-zenml-bentoml-pipeline

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  service.py  test_client.py  train.py  zenml_pipeline.py
